--- a/rental-app/package.json
+++ b/rental-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-js",
+  "name": "rental-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -20,6 +20,8 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.7"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.0"
   }
 }
